[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/MainScene.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/LCD.tres" type="DynamicFont" id=2]

[sub_resource type="Animation" id=1]
resource_name = "death"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("DeathBG/CenterContainer/VBoxContainer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathBG/CenterContainer/VBoxContainer/Label2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0500001 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "victory"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("VictoryBG/CenterContainer/VBoxContainer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VictoryBG/CenterContainer/VBoxContainer/Label2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VictoryBG/CenterContainer/VBoxContainer/Label3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
smoothing_enabled = true

[node name="LevelContainer" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 1 )
anims/victory = SubResource( 2 )

[node name="VictoryBG" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 640, 360 )
color = Color( 0.941176, 0.709804, 0.254902, 1 )

[node name="CenterContainer" type="CenterContainer" parent="VictoryBG"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 640, 360 )

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryBG/CenterContainer"]
margin_left = 120.0
margin_top = 134.0
margin_right = 520.0
margin_bottom = 226.0

[node name="Label" type="Label" parent="VictoryBG/CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 400.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.129412, 0.0941176, 0.105882, 1 )
custom_fonts/font = ExtResource( 2 )
text = "success"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VictoryBG/CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 32.0
margin_right = 400.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.670588, 0.317647, 0.188235, 1 )
custom_fonts/font = ExtResource( 2 )
text = "thanks for playing"
align = 1
valign = 1

[node name="Label3" type="Label" parent="VictoryBG/CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 64.0
margin_right = 400.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0.670588, 0.317647, 0.188235, 1 )
custom_fonts/font = ExtResource( 2 )
text = "press space to play again"
align = 1
valign = 1

[node name="DeathBG" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 640, 360 )

[node name="CenterContainer" type="CenterContainer" parent="DeathBG"]
margin_right = 609.0
margin_bottom = 326.0
rect_min_size = Vector2( 640, 360 )

[node name="VBoxContainer" type="VBoxContainer" parent="DeathBG/CenterContainer"]
margin_left = 128.0
margin_top = 150.0
margin_right = 512.0
margin_bottom = 210.0

[node name="Label" type="Label" parent="DeathBG/CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 384.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "death"
align = 1
valign = 1

[node name="Label2" type="Label" parent="DeathBG/CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.0500001 )
margin_top = 32.0
margin_right = 384.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.682353, 0.682353, 0.682353, 1 )
custom_fonts/font = ExtResource( 2 )
text = "press space to try again"
align = 1
valign = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
